change description api
