# backend/pkg/hobbydb/types.go
@@ -2,11 +2,13 @@ package hobbydb
 
 // HobbyDB is structure of Hobby
 type HobbyDB struct {
-	ID          int
-	Name        string
-	NameEN      string
-	GroupNo     int64
-	Description string
+	ID              int
+	Name            string
+	NameEN          string
+	GroupNo         int64
+	Description     string
+	DescriptionFrom string
+	DescriptionURL  string
 }
 
 // InputValue strruct defines input value for recommendation
